# ZHTP

./: .dockerignore  .gitignore  BROWSER_STRUCTURE.md  COMPLETE_SYSTEM_VERIFICATION.md  CROSS_MACHINE_TESTING_GUIDE.md  Cargo.toml  DOCKER_BUILD_SUCCESS_REPORT.md  FINAL_CIRCUIT_VERIFICATION_REPORT.md  INPUT_VALIDATION_SECURITY_SUMMARY.md  KZG_SECURITY_FIX_REPORT.md  LICENSE  LIVE_TEST_QUICKSTART.md  LIVE_TEST_SETUP.md  QUANTUM_RESISTANCE_SUMMARY.md  QUANTUM_RESISTANT_DEPLOYMENT_COMPLETE.md  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_IMPLEMENTATION_COMPLETE.md  UNIFIED_BLOCKCHAIN_SERVICE_COMPLETE.md  WEB4_COMPLETE_INFRASTRUCTURE.md  ZHTP_KZG_TRUSTED_SETUP_DOCUMENTATION.md  ZHTP_ZKP_SECURITY_AUDIT_COMPLETE.md  live-test-config.template  monitor.html  run-zhtp.bat  run-zhtp.sh  setup-cross-machine-test.bat  setup-cross-machine-test.sh  setup-linux-node.sh  setup-production-node.bat  start-bootstrap-node.bat  test-complete-flow.html  test-config.json  test-cross-machine-messaging.bat  test-whisper-direct.html  unified path  verify-cross-machine-test.py
browser/: debug-network.html  debug.html  index-merged.html  multi-node-setup.html  network-test.html  p2p-test.html  test-flow.html  test-network-data.html  welcome-merged.html  whisper-ip-test.html  whisper.html
circuits/: COMPILATION_SUMMARY.md  README.md  compile_all.bat
circuits/compiled/consensus/: stake_proof.r1cs  stake_proof.sym
circuits/compiled/consensus/stake_proof_js/: generate_witness.js
circuits/compiled/dao/: anonymous_voting.r1cs  anonymous_voting.sym
circuits/compiled/dns/: ownership_proof.r1cs  ownership_proof.sym
circuits/compiled/routing/: routing_proof.r1cs  routing_proof.sym
circuits/compiled/storage/: integrity_proof.r1cs  integrity_proof.sym
circuits/compiled/storage/integrity_proof_js/: generate_witness.js
circuits/compiled/transactions/: private_transfer.r1cs  private_transfer.sym
circuits/setup/: ceremony_startup.sh  quantum_resistance_check.sh  quantum_setup.sh
circuits/src/consensus/: stake_proof.circom
circuits/src/dao/: anonymous_voting.circom
circuits/src/dns/: ownership_proof.circom
circuits/src/routing/: routing_proof.circom
circuits/src/storage/: integrity_proof.circom
circuits/src/transactions/: private_transfer_new.circom
contracts/: Cargo.toml  token.json
contracts/src/: lib.rs  simple_marketplace.rs  simple_whisper.rs
deploy/: Dockerfile  README-deployment.md  dependency-analysis.sh  deploy-complete-system.bat  deploy-complete-system.sh  docker-compose.full-test.yml  validate-deployment.sh
deploy/docker-config/: ceremony.json  full-new.json  full.json  storage-new.json  validator-new.json
deploy/monitoring/: loki-config.yml  prometheus.yml
deploy/test-scripts/: run-full-tests.sh  test-dao-voting.sh  test-dns-resolution.sh  test-e2e-transaction.sh  test-standalone.sh
docs/: README.md  api.md  browser.md  ceremony-participation-guide.md  examples.md  getting-started.md  scripts.md  security.md  tau-ceremony-implementation.md
examples/: README.md  contract_testing.rs  decentralized_app.rs  deploy_dapp.rs  zhtp_mainnet_launch.rs  zhtp_testnet.rs
nodes/zhtp-node-25573/: start.bat
nodes/zhtp-node-25573/config/: node.json
src/: api_server.rs  audit.rs  auth.rs  blockchain.rs  config.rs  errors.rs  health_monitor.rs  input_validation.rs  integration_tests.rs  lib.rs  main.rs  network.rs  network_service.rs  secure_api_server.rs  security_middleware.rs  security_monitor.rs  security_tests.rs  simple_api_server.rs  tls.rs  utils.rs
src/browser/: mod.rs
src/contracts/: mod.rs
src/discovery/: mod.rs
src/storage/: content.rs  dht.rs  mod.rs
src/zhtp/: ceremony_coordinator.rs  ceremony_participants.rs  consensus_engine.rs  contracts.rs  crypto.rs  dao.rs  dapp_launchpad.rs  dns.rs  economics.rs  mod.rs  monitoring.rs  p2p_network.rs  routing.rs  zk_proofs.rs  zk_transactions.rs
