[package]
name = "decentralized_network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.10"
ed25519-dalek = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
blake3 = "1.5"
chacha20poly1305 = "0.10"
sha3 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
base64 = "0.21"
toml = "0.8"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
wasmi = { version = "0.31" }
wat = "1.0"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }

# P2P Networking for Mainnet (Basic TCP implementation)
# libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "websocket", "ping", "identify", "kad", "gossipsub", "mdns"] }
# tokio-util = { version = "0.7", features = ["compat"] }
# multiaddr = "0.18"

[build-dependencies]
wasmer = "2.3"
wasmer-compiler = "2.3"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
decentralized_network = { path = "." }

[workspace]
members = [
    "contracts"
]
exclude = [
    "app_installer"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "zhtp"
path = "src/network_service.rs"

[[bin]]
name = "zhtp-dev"
path = "src/main.rs"


