[package]
name = "decentralized_network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.10"
ed25519-dalek = "2.2.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
env_logger = "0.11.8"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
blake3 = "1.5"
chacha20poly1305 = "0.10"
sha3 = "0.10"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
base64 = "0.22.1"
toml = "0.9.5"
tempfile = "3.8"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
wasmi = { version = "0.31.2" }
wat = "1.0"
hyper = { version = "1.6.0", features = ["full"] }
http = "1.3.1"
regex = "1.10"
reqwest = { version = "0.12.23", features = ["json"] }
sysinfo = "0.31"  # System monitoring

# P2P Networking for Mainnet (Basic TCP implementation)
libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "websocket", "ping", "identify", "kad", "gossipsub", "mdns"] }
tokio-util = { version = "0.7.16", features = ["compat"] }

# Security dependencies for production
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "buffer", "limit"] }
tower-http = { version = "0.5", features = ["cors", "limit", "timeout", "trace", "set-header"] }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
# Use native-tls instead of rustls for easier Windows build
native-tls = "0.2.12"
tokio-native-tls = "0.3.1"
multiaddr = "0.18"
js-sys = "0.3.77"

[build-dependencies]
wasmer = "6.0.1"
wasmer-compiler = "6.0.1"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11.8"
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
decentralized_network = { path = "." }

[workspace]
members = [
    "contracts"
]
exclude = [
    "app_installer"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
proof-debug = []

[[bin]]
name = "zhtp"
path = "src/network_service.rs"

[[bin]]
name = "zhtp-dev"
path = "src/main.rs"

[[bin]]
name = "zhtp-production"
path = "src/bin/zhtp-production.rs"

[[bin]]
name = "multi-node"
path = "src/bin/multi-node.rs"

[[bin]]
name = "deployment-test"
path = "src/bin/deployment-test.rs"

[[bin]]
name = "zhtp-seeder"
path = "src/bin/zhtp-seeder.rs"
